Fix facet tree left padding, bug since custom scrollbar removal

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -553,9 +553,6 @@ div.gn, div.g, * {
         }
       }
     }
-    > ul {
-      padding-left:0;
-    }
     .sxt-categorytree-leaf {
       margin-left: 1.7em;
     }
